reverse tiles description tiles traits description

--- a/content/MoM/base/tiles.ini
+++ b/content/MoM/base/tiles.ini
@@ -1,145 +1,241 @@
 [TileSideAlley1]
 image="../ffg/img/Tile_Alley_1_MAD20.dds"
+traits=outside small street
+reverse=TileSideBedroom1
 
 [TileSideAlley2]
 image="../ffg/img/Tile_Alley_2_MAD20.dds"
+traits=outside small street
+reverse=TileSideBedroom2
 
 [TileSideAlleyCorner1]
 image="../ffg/img/Tile_Alley_Corner_1_MAD20.dds"
+traits=outside small street
+reverse=TileSideHallCorner1
 
 [TileSideAlleyCorner2]
 image="../ffg/img/Tile_Alley_Corner_2_MAD20.dds"
+traits=outside small street
+reverse=TileSideHallCorner2
 
 [TileSideAlleyEnd]
 image="img/Tile_Alley_End_MAD20.jpg"
 pps=72
+traits=outside small street
+reverse=TileSideBilliardsRoom
 
 [TileSideAttic]
 image="../ffg/img/Tile_Attic_MAD20.dds"
+traits=inside medium stairs
+reverse=TileSideParkPond
 
 [TileSideBallroom]
 image="../ffg/img/Tile_Ballroom_MAD20.dds"
+traits=inside medium
+reverse=TileSideWarehouse
 
 [TileSideBasement]
 image="../ffg/img/Tile_Basement_MAD20.dds"
+traits=inside medium stairs
+reverse=TileSideFleaMarket
 
 [TileSideBathroom]
 image="../ffg/img/Tile_Bathroom_MAD20.dds"
+traits=inside small hallway bathroom
+reverse=TileSideStreet1
 
 [TileSideBeach]
 image="../ffg/img/Tile_Beach_MAD20.dds"
+traits=inside outside small water
+reverse=TileSideYard2
 
 [TileSideBedroom1]
 image="../ffg/img/Tile_Bedroom_1_MAD20.dds"
+traits=inside small bedroom
+reverse=TileSideAlley1
 
 [TileSideBedroom2]
 image="../ffg/img/Tile_Bedroom_2_MAD20.dds"
+traits=inside small bedroom
+reverse=TileSideAlley2
 
 [TileSideBellTower]
 image="../ffg/img/Tile_Bell_Tower_MAD20.dds"
+traits=inside  small
+reverse=TileSideStreetCorner1
 
 [TileSideBilliardsRoom]
 image="../ffg/img/Tile_Billiards_Room_MAD20.dds"
+traits=inside small
+reverse=TileSideAlleyEnd
 
 [TileSideConservatory]
 image="../ffg/img/Tile_Conservatory_MAD20.dds"
+traits=inside outside medium
+reverse=TileSideStorefront
 
 [TileSideDiningRoom]
 image="../ffg/img/Tile_Dining_Room_MAD20.dds"
+traits=inside medium kitcken
+reverse=TileSideTownSquare
 
 [TileSideDock1]
 image="../ffg/img/Tile_Dock_1_MAD20.dds"
+traits=outside small dock
+reverse=TileSideHall2
 
 [TileSideDock2]
 image="../ffg/img/Tile_Dock_2_MAD20.dds"
+traits=outside small dock
+reverse=TileSideHall1
 
 [TileSideEntryHall]
 image="../ffg/img/Tile_Entry_Hall_MAD20.dds"
+traits=inside small hallway
+reverse=TileSideStreetCorner2
 
 [TileSideFleaMarket]
 image="img/Tile_Flea_Market_MAD20.jpg"
 pps=72
+traits=outside medium
+reverse=TileSideBasement
 
 [TileSideHall1]
 image="../ffg/img/Tile_Hall_1_MAD20.dds"
+traits=inside small hallway
+reverse=TileSideDock2
 
 [TileSideHall2]
 image="../ffg/img/Tile_Hall_2_MAD20.dds"
+traits=inside small hallway
+reverse=TileSideDock1
 
 [TileSideHallCorner1]
 image="../ffg/img/Tile_Hall_Corner_1_MAD20.dds"
+traits=inside small hallway
+reverse=TileSideAlleyCorner1
 
 [TileSideHallCorner2]
 image="../ffg/img/Tile_Hall_Corner_2_MAD20.dds"
+traits=inside small hallway
+reverse=TileSideAlleyCorner2
 
 [TileSideHallEnd]
 image="../ffg/img/Tile_Hall_End_MAD20.dds"
+traits=inside small hallway
+reverse=TileSideStreetCorner3
 
 [TileSideHallStairs]
 image="../ffg/img/Tile_Hall_Stairs_MAD20.dds"
+traits=inside small hallway stairs
+reverse=TileSideStreet2
 
 [TileSideHouseBoat]
 image="../ffg/img/Tile_House_Boat_MAD20.dds"
+traits=outside inside small water
+reverse=TileSideOffice
 
 [TileSideInteriorHall]
 image="../ffg/img/Tile_Interior_Hall_MAD20.dds"
+traits=inside medium hallway
+reverse=TileSideRootCellar
 
 [TileSideLibrary]
 image="../ffg/img/Tile_Library_MAD20.dds"
+traits=inside small
+reverse=TileSideYard1
 
 [TileSideLobby]
 image="../ffg/img/Tile_Lobby_MAD20.dds"
+traits=inside medium
+reverse=TileSideToolShed
 
 [TileSideLounge]
 image="../ffg/img/Tile_Lounge_MAD20.dds"
+traits=inside medium
+reverse=TileSidePier
 
 [TileSideOffice]
 image="../ffg/img/Tile_Office_MAD20.dds"
+traits=inside small
+reverse=TileSideHouseBoat
 
 [TileSideParkPond]
 image="../ffg/img/Tile_Park_Pond_MAD20.dds"
+traits=outside medium water
+reverse=TileSideAttic
 
 [TileSidePier]
 image="../ffg/img/Tile_Pier_MAD20.dds"
+traits=inside outside medium dock water
+reverse=TileSideLounge
 
 [TileSideRentalDock]
 image="../ffg/img/Tile_Rental_Dock_MAD20.dds"
+traits=inside outside small dock
+reverse=TileSideStudy
 
 [TileSideRootCellar]
 image="../ffg/img/Tile_Root_Cellar_MAD20.dds"
+traits=inside outside medium
+reverse=TileSideInteriorHall
 
 [TileSideStorefront]
 image="../ffg/img/Tile_Storefront_MAD20.dds"
+traits=inside outside medium street
+reverse=TileSideConservatory
 
 [TileSideStreet1]
 image="../ffg/img/Tile_Street_1_MAD20.dds"
+traits=outside small street
+reverse=TileSideBathroom
 
 [TileSideStreet2]
 image="../ffg/img/Tile_Street_2_MAD20.dds"
+traits=outside small street
+reverse=TileSideHallStairs
 
 [TileSideStreetCorner1]
 image="../ffg/img/Tile_Street_Corner_1_MAD20.dds"
+traits=outside small street
+reverse=TileSideBellTower
 
 [TileSideStreetCorner2]
 image="../ffg/img/Tile_Street_Corner_2_MAD20.dds"
+traits=outside small street
+reverse=TileSideEntryHall
 
 [TileSideStreetCorner3]
 image="../ffg/img/Tile_Street_Corner_3_MAD20.dds"
+traits=outside small street
+reverse=TileSideHallEnd
 
 [TileSideStudy]
 image="../ffg/img/Tile_Study_MAD20.dds"
+traits=inside small
+reverse=TileSideRentalDock
 
 [TileSideToolShed]
 image="../ffg/img/Tile_Tool_Shed_MAD20.dds"
+traits=inside outside medium
+reverse=TileSideLobby
 
 [TileSideTownSquare]
 image="../ffg/img/Tile_Town_Square_MAD20.dds"
+traits=outside medium
+reverse=TileSideDiningRoom
 
 [TileSideWarehouse]
 image="../ffg/img/Tile_Warehouse_MAD20.dds"
+traits=inside medium storage
+reverse=TileSideBallroom
 
 [TileSideYard1]
 image="../ffg/img/Tile_Yard_1_MAD20.dds"
+traits=outside small
+reverse=TileSideLibrary
 
 [TileSideYard2]
 image="../ffg/img/Tile_Yard_2_MAD20.dds"
+traits=outside small
+reverse=TileSideBeach
