--- a/content/MoM/btt/tiles.ini
+++ b/content/MoM/btt/tiles.ini
@@ -1,35 +1,59 @@
 [TileSideAtticStorage]
 image="../ffg/img/Tile_Attic_Storage_MAD23.dds"
+traits=inside small
+reverse=TileSideLibraryMAD23
 
 [TileSideBalcony]
 image="../ffg/img/Tile_Balcony_MAD23.dds"
+traits=outside small
+reverse=TileSideBasementStorage
 
 [TileSideBasementStorage]
 image="../ffg/img/Tile_Basement_Storage_MAD23.dds"
+traits=inside small
+reverse=TileSideBalcony
 
 [TileSideBedroom]
 image="../ffg/img/Tile_Bedroom_MAD23.dds"
+traits=inside small bedroom storage
+reverse=TileSideKitchen
 
 [TileSideDiningRoomMAD23]
 image="../ffg/img/Tile_Dining_Room_MAD23.dds"
+traits=inside small
+reverse=TileSideHallCorner
 
 [TileSideEntryHallMAD23]
 image="../ffg/img/Tile_Entry_Hall_MAD23.dds"
+traits=inside small hallway
+reverse=TileSidePorch
 
 [TileSideHallCorner]
 image="../ffg/img/Tile_Hall_Corner_MAD23.dds"
+traits=inside small hallway
+reverse=TileSideDiningRoomMAD23
 
 [TileSideHallStairsMAD23]
 image="../ffg/img/Tile_Hall_Stairs_MAD23.dds"
+traits=inside small hallway stairs
+reverse=TileSideYard1MAD23
 
 [TileSideKitchen]
 image="../ffg/img/Tile_Kitchen_MAD23.dds"
+traits=inside small kitchen storage
+reverse=TileSideBedroom
 
 [TileSideLibraryMAD23]
 image="../ffg/img/Tile_Library_MAD23.dds"
+traits=inside small
+reverse=TileSideAtticStorage
 
 [TileSidePorch]
 image="../ffg/img/Tile_Porch_MAD23.dds"
+traits=inside outside small
+reverse=TileSideEntryHallMAD23
 
 [TileSideYard1MAD23]
 image="../ffg/img/Tile_Yard_1_MAD23.dds"
+traits=outside small
+reverse=TileSideHallStairsMAD23
