--- a/content/MoM/cotw/tiles.ini
+++ b/content/MoM/cotw/tiles.ini
@@ -1,78 +1,122 @@
 [TileSideAbandonedShack]
 image="../ffg/img/Tile_Abandoned_Shack_MAD09.dds"
+traits=inside outside medium
+reverse=TileSideHillTop
 
 [TileSideBarn]
 image="../ffg/img/Tile_Barn_MAD09.dds"
 aspect=1.5
 pps=146.28571
+traits=inside outside big
+reverse=TileSideCoveredBridge
 
 [TileSideCampsite]
 image="img/Tile_Campsite_MAD09.jpg"
 pps=72
+traits=outside small
+reverse=TileSideScarecrow
 
 [TileSideCaveBend]
 image="img/Tile_Cave_Bend_MAD09.jpg"
 pps=72
+traits=inside small cave
+reverse=TileSideOldOak
 
 [TileSideCaveEntrance]
 image="../ffg/img/Tile_Cave_Entrance_MAD09.dds"
+traits=outside small
+reverse=TileSidePigPen
 
 [TileSideCoveredBridge]
 image="../ffg/img/Tile_Covered_Bridge_MAD09.dds"
 aspect=1.5
 pps=146.28571
+traits=inside outside big river
+reverse=TileSideBarn
 
 [TileSideHillTop]
 image="../ffg/img/Tile_HillTop_MAD09.dds"
+traits=outside medium
+reverse=TileSideAbandonedShack
 
 [TileSideMarshland]
 image="../ffg/img/Tile_Marshland_MAD09.dds"
+traits=outside medium river water
+reverse=TileSideRitualSite
 
 [TileSideOldForest]
 image="../ffg/img/Tile_Old_Forest_MAD09.dds"
 aspect=1.5
 pps=146.28571
+traits=outside big
+reverse=TileSideWaterwheel
 
 [TileSideOldOak]
 image="../ffg/img/Tile_Old_Oak_MAD09.dds"
+traits=outside small
+reverse=TileSideCaveBend
 
 [TileSideOldWell]
 image="../ffg/img/Tile_Old_Well_MAD09.dds"
+traits=outside small
+reverse=TileSideRiverBend
 
 [TileSideOuthouse]
 image="img/Tile_Outhouse_MAD09.jpg"
 pps=72
+traits=inside outside small
+reverse=TileSideRiverRapids
 
 [TileSidePigPen]
 image="img/Tile_Pingpen_MAD09.jpg"
 pps=72
+traits=outside small
+reverse=TileSideCaveEntrance
 
 [TileSidePond]
 image="../ffg/img/Tile_Pond_MAD09.dds"
+traits=outside medium river water
+reverse=TileSideTortureChamber
 
 [TileSideRitualSite]
 image="../ffg/img/Tile_Ritual_Site_MAD09.dds"
+traits=outside medium
+reverse=TileSideMarshland
 
 [TileSideRiverBend]
 image="img/Tile_River_Bend_1_MAD09.jpg"
 pps=72
+traits=outside small river
+reverse=TileSideOldWell
 
 [TileSideRiverRapids]
 image="../ffg/img/Tile_River_Rapids_MAD09.dds"
+traits=outside small river
+reverse=TileSideOuthouse
 
 [TileSideRottedPorch]
 image="../ffg/img/Tile_Rotted_Porch_MAD09.dds"
+traits=inside outside small
+reverse=TileSideSpruceGrove
 
 [TileSideScarecrow]
 image="../ffg/img/Tile_Scarecrow_MAD09.dds"
+traits=outside small
+reverse=TileSideCampsite
 
 [TileSideSpruceGrove]
 image="../ffg/img/Tile_Spruce_Grove_MAD09.dds"
+traits=outside small
+reverse=TileSideRottedPorch
 
 [TileSideTortureChamber]
 image="../ffg/img/Tile_Torture_Chamber_MAD09.dds"
+traits=inside medium cave
+reverse=TileSidePond
 
 [TileSideWaterwheel]
 image="../ffg/img/Tile_Waterwheel_MAD09.dds"
 aspect=1.5
 pps=146.28571
+traits=inside outside big river
+reverse=TileSideOldForest
