--- a/content/MoM/fa/tiles.ini
+++ b/content/MoM/fa/tiles.ini
@@ -1,38 +1,62 @@
 [TileSideCave3]
 image="img/Tile_Cave_3_MAD06.jpg"
 pps=72
+traits=inside small cave
+reverse=TileSideOfficeFA
 
 [TileSideGeneratorRoom]
 image="../ffg/img/Tile_Generator_Room_MAD06.dds"
+traits=inside medium
+reverse=TileSideOperatingTheater
 
 [TileSideGraveyard2]
 image="../ffg/img/Tile_Graveyard_2_MAD06.dds"
+traits=outside small
+reverse=TileSideHallway5
 
 [TileSideGreenhouse]
 image="../ffg/img/Tile_Greenhouse_MAD06.dds"
+traits=inside outside medium
+reverse=TileSideHiddenLaboratory
 
 [TileSideHallway5]
 image="../ffg/img/Tile_Hallway_5_MAD06.dds"
+traits=inside small hallway
+reverse=TileSideGraveyard2
 
 [TileSideHiddenLaboratory]
 image="../ffg/img/Tile_Hidden_Laboratory_MAD06.dds"
+traits=inside medium
+reverse=TileSideGreenhouse
 
 [TileSideMedicalStorage]
 image="../ffg/img/Tile_Medical_Storage_MAD06.dds"
+traits=inside small storage
+reverse=TileSideObservationRoom
 
 [TileSideMorgue]
 image="../ffg/img/Tile_Morgue_MAD06.dds"
+traits=inside medium
+reverse=TileSideRooftop
 
 [TileSideObservationRoom]
 image="img/Tile_Observation_Room_MAD06.jpg"
 pps=72
+traits=inside small
+reverse=TileSideMedicalStorage
 
 [TileSideOfficeFA]
 image="../ffg/img/Tile_Office_MAD06.dds"
+traits=inside small
+reverse=TileSideCave3
 
 [TileSideOperatingTheater]
 image="img/Tile_Operating_Theater_MAD06.jpg"
 pps=72
+traits=inside medium
+reverse=TileSideGeneratorRoom
 
 [TileSideRooftop]
 image="../ffg/img/Tile_Rooftop_MAD06.dds"
+traits=outside medium
+reverse=TileSideMorgue
