reverse tiles for D2E

--- a/content/D2E/boxed/lotw/tiles.ini
+++ b/content/D2E/boxed/lotw/tiles.ini
@@ -5,12 +5,14 @@ top=197
 left=197
 image="../../ffg/img/031A.dds"
 traits=rubble outside
+reverse=TileSide31B
 
 [TileSide31B]
 top=197
 left=197
 image="../../ffg/img/031B.dds"
 traits=treasure inside
+reverse=TileSide31A
 
 [TileSide32A]
 top=72
@@ -18,18 +20,21 @@ left=72
 pps=72
 image="img/032A.png"
 traits=outside
+reverse=TileSide32B
 
 [TileSide32B]
 top=46
 left=46
 image="../../ffg/img/032B.dds"
 traits=treasure inside
+reverse=TileSide32A
 
 [TileSide33A]
 top=151
 left=46
 image="../../ffg/img/033A.dds"
 traits=outside water
+reverse=TileSide33B
 
 [TileSide33B]
 top=72
@@ -37,6 +42,7 @@ left=72
 pps=72
 image="img/033B.png"
 traits=inside
+reverse=TileSide33A
 
 [TileSide34A]
 top=72
@@ -44,24 +50,28 @@ left=72
 pps=72
 image="img/034A.png"
 traits=outside
+reverse=TileSide34B
 
 [TileSide34B]
 top=197
 left=354.5
 image="../../ffg/img/034B.dds"
 traits=stairs inside
+reverse=TileSide34A
 
 [TileSide35A]
 top=249.5
 left=262.5
 image="../../ffg/img/035A.dds"
 traits=outside
+reverse=TileSide35B
 
 [TileSide35B]
 top=249.5
 left=236.5
 image="../../ffg/img/035B.dds"
 traits=lava inside
+reverse=TileSide35A
 
 [TileSideS1A]
 top=72
@@ -69,6 +79,7 @@ left=72
 pps=72
 image="img/0S1A.png"
 traits=outside
+reverse=TileSideS1B
 
 [TileSideS1B]
 top=72
@@ -76,3 +87,4 @@ left=72
 pps=72
 image="img/0S1B.png"
 traits=inside
+reverse=TileSideS1A
