--- a/content/D2E/boxed/mob/tiles.ini
+++ b/content/D2E/boxed/mob/tiles.ini
@@ -3,18 +3,21 @@ top=164
 left=164
 image="../../ffg/img/078A.dds"
 traits=outside swamp
+reverse=TileSide78B
 
 [TileSide78B]
 top=164
 left=164
 image="../../ffg/img/078A.dds"
 traits=inside
+reverse=TileSide78A
 
 [TileSide79A]
 top=151
 left=151
 image="../../ffg/img/079A.dds"
 traits=outside
+reverse=TileSide79B
 
 [TileSide79B]
 top=72
@@ -22,111 +25,130 @@ left=72
 pps=72
 image="img/079B.png"
 traits=inside
+reverse=TileSide79A
 
 [TileSide80A]
 top=164
 left=46
 image="../../ffg/img/080A.dds"
 traits=outside
+reverse=TileSide80B
 
 [TileSide80B]
 top=164
 left=46
 image="../../ffg/img/080B.dds"
 traits=inside
+reverse=TileSide80A
 
 [TileSide81A]
 top=249.5
 left=262.5
 image="../../ffg/img/081A.dds"
 traits=outside swamp bridge sludge
+reverse=TileSide81B
 
 [TileSide81B]
 top=249.5
 left=236.5
 image="../../ffg/img/081B.dds"
 traits=inside
+reverse=TileSide81A
 
 [TileSide82A]
 top=59
 left=98.5
 image="../../ffg/img/082A.dds"
 traits=outside
+reverse=TileSide82B
 
 [TileSide82B]
 top=59
 left=98.5
 image="../../ffg/img/082B.dds"
 traits=inside library
+reverse=TileSide82A
 
 [TileSide83A]
 top=354.5
 left=184
 image="../../ffg/img/083A.dds"
 traits=outside swamp sludge
+reverse=TileSide83B
 
 [TileSide83B]
 top=354.5
 left=184
 image="../../ffg/img/083B.dds"
 traits=inside
+reverse=TileSide83A
 
 [TileSide84A]
 top=236.5
 left=144.5
 image="../../ffg/img/084A.dds"
 traits=outside
+reverse=TileSide84B
 
 [TileSide84B]
 top=236.5
 left=144.5
 image="../../ffg/img/084B.dds"
 traits=inside outside
+reverse=TileSide84A
 
 [TileSide85A]
 top=197
 left=197
 image="../../ffg/img/085A.dds"
 traits=outside swamp
+reverse=TileSide85B
 
 [TileSide85B]
 top=197
 left=197
 image="../../ffg/img/085B.dds"
 traits=inside
+reverse=TileSide85A
 
 [TileSide86A]
 top=367.5
 left=92
 image="../../ffg/img/086A.dds"
 traits=outside swamp water sludge
+reverse=TileSide86B
 
 [TileSide86B]
 top=367.5
 left=92
 image="../../ffg/img/086B.dds"
 traits=inside
+reverse=TileSide86A
 
 [TileSide87A]
 top=92
 left=79
 image="../../ffg/img/087A.dds"
 traits=outside
+reverse=TileSide87B
 
 [TileSide87B]
 top=92
 left=79
 image="../../ffg/img/087B.dds"
 traits=inside torture sludge
+reverse=TileSide87A
 
 [TileSideEntranceSwampA]
 top=36
 left=23
 image="../../ffg/img/Entrance05.dds"
 traits=outside swamp
+reverse=TileSideEntranceSwampB
 
 [TileSideEntranceSwampB]
 top=36
 left=23
 image="../../ffg/img/Entrance06.dds"
 traits=inside
+reverse=TileSideEntranceSwampA
