--- a/content/D2E/boxed/mor/tiles.ini
+++ b/content/D2E/boxed/mor/tiles.ini
@@ -5,6 +5,7 @@ top=197
 left=197
 image="../../ffg/img/070A.dds"
 traits=outside inside transition
+reverse=TileSide70B
 
 [TileSide70B]
 top=72
@@ -12,54 +13,63 @@ left=72
 pps=72
 image="img/070B.png"
 traits=inside
+reverse=TileSide70A
 
 [TileSide71A]
 top=197
 left=197
 image="../../ffg/img/071A.dds"
 traits=outside tents
+reverse=TileSide71B
 
 [TileSide71B]
 top=197
 left=197
 image="../../ffg/img/071B.dds"
 traits=inside
+reverse=TileSide71A
 
 [TileSide72A]
 top=302
 left=197
 image="../../ffg/img/072A.dds"
 traits=outside stables
+reverse=TileSide72B
 
 [TileSide72B]
 top=302
 left=197
 image="../../ffg/img/072B.dds"
 traits=inside hall
+reverse=TileSide72A
 
 [TileSide73A]
 top=354.5
 left=197
 image="../../ffg/img/073A.dds"
 traits=outside
+reverse=TileSide73B
 
 [TileSide73B]
 top=354.5
 left=197
 image="../../ffg/img/073B.dds"
 traits=inside
+reverse=TileSide73A
 
 [TileSide74A]
 top=263
 left=289
 image="../../ffg/img/074A.dds"
 traits=inside outside transition bedroom
+reverse=TileSide74B
 
 [TileSide74B]
 top=263
 left=315
 image="../../ffg/img/074B.dds"
 traits=inside outside transition
+reverse=TileSide74A
 
 [TileSide75A]
 top=72
@@ -67,24 +77,28 @@ left=72
 pps=72
 image="img/075A.png"
 traits=outside pit
+reverse=TileSide75B
 
 [TileSide75B]
 top=46
 left=46
 image="../../ffg/img/075B.dds"
 traits=inside
+reverse=TileSide75A
 
 [TileSide76A]
 top=164
 left=46
 image="../../ffg/img/076A.dds"
 traits=outside
+reverse=TileSide76B
 
 [TileSide76B]
 top=164
 left=46
 image="../../ffg/img/076B.dds"
 traits=inside
+reverse=TileSide76A
 
 [TileSide77A]
 top=72
@@ -92,9 +106,11 @@ left=72
 pps=72
 image="img/077A.png"
 traits=outside
+reverse=TileSide77B
 
 [TileSide77B]
 top=164
 left=164
 image="../../ffg/img/077B.dds"
 traits=inside
+reverse=TileSide77A
