--- a/content/D2E/boxed/son/tiles.ini
+++ b/content/D2E/boxed/son/tiles.ini
@@ -5,102 +5,119 @@ top=184
 left=197
 image="../../ffg/img/050A.dds"
 traits=city fountain
+reverse=TileSide50B
 
 [TileSide50B]
 top=184
 left=197
 image="../../ffg/img/050B.dds"
 traits=blackrealm altar
+reverse=TileSide50A
 
 [TileSide51A]
 top=289
 left=197
 image="../../ffg/img/051A.dds"
 traits=city beds
+reverse=TileSide51B
 
 [TileSide51B]
 top=289
 left=197
 image="../../ffg/img/051B.dds"
 traits=blackrealm
+reverse=TileSide51A
 
 [TileSide52A]
 top=302
 left=249.5
 image="../../ffg/img/052A.dds"
 traits=outside
+reverse=TileSide52B
 
 [TileSide52B]
 top=302
 left=249.5
 image="../../ffg/img/052B.dds"
 traits=inside water
+reverse=TileSide52A
 
 [TileSide53A]
 top=59
 left=59
 image="../../ffg/img/053A.dds"
 traits=outside
+reverse=TileSide53B
 
 [TileSide53B]
 top=59
 left=33
 image="../../ffg/img/053B.dds"
 traits=inside water
+reverse=TileSide53A
 
 [TileSide54A]
 top=59
 left=59
 image="../../ffg/img/054A.dds"
 traits=city study
+reverse=TileSide54B
 
 [TileSide54B]
 top=59
 left=33
 image="../../ffg/img/054B.dds"
 traits=blackrealm pit
+reverse=TileSide54A
 
 [TileSide55A]
 top=302
 left=197
 image="../../ffg/img/055A.dds"
 traits=city prison
+reverse=TileSide55B
 
 [TileSide55B]
 top=302
 left=197
 image="../../ffg/img/055B.dds"
 traits=blackrealm stairs
+reverse=TileSide55A
 
 [TileSide56A]
 top=302
 left=184
 image="../../ffg/img/056A.dds"
 traits=city library
+reverse=TileSide56B
 
 [TileSide56B]
 top=302
 left=210
 image="../../ffg/img/056B.dds"
 traits=blackrealm plinth
+reverse=TileSide56A
 
 [TileSide57A]
 top=210
 left=302
 image="../../ffg/img/057A.dds"
 traits=city
+reverse=TileSide57B
 
 [TileSide57B]
 top=210
 left=302
 image="../../ffg/img/057B.dds"
 traits=blackrealm
+reverse=TileSide57A
 
 [TileSide58A]
 top=341.5
 left=197
 image="../../ffg/img/058A.dds"
 traits=city water
+reverse=TileSide58B
 
 [TileSide58B]
 top=72
@@ -108,36 +125,42 @@ left=72
 pps=72
 image="img/058B.png"
 traits=blackrealm
+reverse=TileSide58A
 
 [TileSide59A]
 top=262.5
 left=249.5
 image="../../ffg/img/059A.dds"
 traits=blackrealm city transistion
+reverse=TileSide59B
 
 [TileSide59B]
 top=262.5
 left=249.5
 image="../../ffg/img/059B.dds"
 traits=blackrealm altar city transistion
+reverse=TileSide59A
 
 [TileSide60A]
 top=197
 left=236.5
 image="../../ffg/img/060A.dds"
 traits=city tavern
+reverse=TileSide60B
 
 [TileSide60B]
 top=197
 left=232.5
 image="../../ffg/img/060B.dds"
 traits=blackrealm
+reverse=TileSide60A
 
 [TileSide61A]
 top=59
 left=59
 image="../../ffg/img/061A.dds"
 traits=city water
+reverse=TileSide61B
 
 [TileSide61B]
 top=72
@@ -145,30 +168,35 @@ left=72
 pps=72
 image="img/061B.png"
 traits=blackrealm
+reverse=TileSide61A
 
 [TileSide62A]
 top=111.5
 left=98.5
 image="../../ffg/img/062A.dds"
 traits=city
+reverse=TileSide62B
 
 [TileSide62B]
 top=111.5
 left=98.5
 image="../../ffg/img/062B.dds"
 traits=blackrealm
+reverse=TileSide62A
 
 [TileSide63A]
 top=354.5
 left=249.5
 image="../../ffg/img/063A.dds"
 traits=city
+reverse=TileSide63B
 
 [TileSide63B]
 top=354.5
 left=249.5
 image="../../ffg/img/063B.dds"
 traits=blackrealm
+reverse=TileSide63A
 
 [TileSide64A]
 top=72
@@ -176,6 +204,7 @@ left=72
 pps=72
 image="img/064A.png"
 traits=city
+reverse=TileSide64B
 
 [TileSide64B]
 top=72
@@ -183,54 +212,63 @@ left=72
 pps=72
 image="img/064B.png"
 traits=blackrealm
+reverse=TileSide64A
 
 [TileSide65A]
 top=164
 left=46
 image="../../ffg/img/065A.dds"
 traits=city
+reverse=TileSide65B
 
 [TileSide65B]
 top=164
 left=46
 image="../../ffg/img/065B.dds"
 traits=blackrealm
+reverse=TileSide65A
 
 [TileSide66A]
 top=164
 left=46
 image="../../ffg/img/066A.dds"
 traits=city
+reverse=TileSide66B
 
 [TileSide66B]
 top=164
 left=46
 image="../../ffg/img/066B.dds"
 traits=blackrealm
+reverse=TileSide66A
 
 [TileSide67A]
 top=164
 left=151
 image="../../ffg/img/067A.dds"
 traits=city
+reverse=TileSide67B
 
 [TileSide67B]
 top=164
 left=151
 image="../../ffg/img/067B.dds"
 traits=blackrealm
+reverse=TileSide67A
 
 [TileSide68A]
 top=164
 left=138
 image="../../ffg/img/068A.dds"
 traits=city
+reverse=TileSide68B
 
 [TileSide68B]
 top=164
 left=164
 image="../../ffg/img/068B.dds"
 traits=blackrealm
+reverse=TileSide68A
 
 [TileSide69A]
 top=72
@@ -238,66 +276,77 @@ left=72
 pps=72
 image="img/069A.png"
 traits=city
+reverse=TileSide69B
 
 [TileSide69B]
 top=151
 left=151
 image="../../ffg/img/069B.dds"
 traits=blackrealm
+reverse=TileSide69A
 
 [TileSideCapSoNA]
 top=90
 left=23
 image="../../ffg/img/Cap03.dds"
 traits=city
+reverse=TileSideCapSoNB
 
 [TileSideCapSoNB]
 top=90
 left=23
 image="../../ffg/img/Cap04.dds"
 traits=blackrealm
+reverse=TileSideCapSoNA
 
 [TileSideEntranceSoNA]
 top=36
 left=23
 image="../../ffg/img/Entrance03.dds"
 traits=city
+reverse=TileSideEntranceSoNB
 
 [TileSideEntranceSoNB]
 top=36
 left=23
 image="../../ffg/img/Entrance04.dds"
 traits=blackrealm
+reverse=TileSideEntranceSoNA
 
 [TileSideExtensionSoNA]
 top=75
 left=23
 image="../../ffg/img/Joint04.dds"
 traits=city
+reverse=TileSideExtensionSoNB
 
 [TileSideExtensionSoNB]
 top=75
 left=23
 image="../../ffg/img/Joint03.dds"
 traits=blackrealm
+reverse=TileSideExtensionSoNA
 
 [TileSideTransitionSoNA]
 top=75.5
 left=23
 image="../../ffg/img/Transition02.dds"
 traits=city outside transistion
+reverse=TileSideTransitionSoNB
 
 [TileSideTransitionSoNB]
 top=75.5
 left=23
 image="../../ffg/img/Transition03.dds"
 traits=blackrealm inside
+reverse=TileSideTransitionSoNA
 
 [TileSideTransitionSoN2A]
 top=151
 left=151
 image="../../ffg/img/Transition06.dds"
 traits=city inside transistion
+reverse=TileSideTransitionSoN2B
 
 [TileSideTransitionSoN2B]
 top=72
@@ -305,3 +354,4 @@ left=72
 pps=72
 image="img/transition2B.png"
 traits=blackrealm city transition
+reverse=TileSideTransitionSoN2A
