--- a/content/D2E/boxed/tctr/tiles.ini
+++ b/content/D2E/boxed/tctr/tiles.ini
@@ -5,36 +5,42 @@ top=197
 left=197
 image="../../ffg/img/088A.dds"
 traits=outside swamp
+reverse=TileSide88B
 
 [TileSide88B]
 top=197
 left=197
 image="../../ffg/img/088B.dds"
 traits=inside
+reverse=TileSide88A
 
 [TileSide89A]
 top=197
 left=289
 image="../../ffg/img/089A.dds"
 traits=outside pit
+reverse=TileSide89B
 
 [TileSide89B]
 top=197
 left=289
 image="../../ffg/img/089B.dds"
 traits=inside pit
+reverse=TileSide89A
 
 [TileSide90A]
 top=197
 left=289
 image="../../ffg/img/090A.dds"
 traits=outside
+reverse=TileSide90B
 
 [TileSide90B]
 top=197
 left=184
 image="../../ffg/img/090B.dds"
 traits=inside stairs
+reverse=TileSide90A
 
 [TileSide91A]
 top=72
@@ -42,78 +48,91 @@ left=72
 pps=72
 image="img/091A.png"
 traits=outside
+reverse=TileSide91B
 
 [TileSide91B]
 top=197
 left=289
 image="../../ffg/img/091B.dds"
 traits=inside
+reverse=TileSide91A
 
 [TileSide92A]
 top=197
 left=302
 image="../../ffg/img/092A.dds"
 traits=outside swamp sludge
+reverse=TileSide92B
 
 [TileSide92B]
 top=197
 left=302
 image="../../ffg/img/092B.dds"
 traits=inside statues
+reverse=TileSide92A
 
 [TileSide93A]
 top=197
 left=289
 image="../../ffg/img/093A.dds"
 traits=outside swamp sludge
+reverse=TileSide93B
 
 [TileSide93B]
 top=197
 left=289
 image="../../ffg/img/093B.dds"
 traits=inside map
+reverse=TileSide93A
 
 [TileSide94A]
 top=197
 left=394
 image="../../ffg/img/094A.dds"
 traits=outside
+reverse=TileSide94B
 
 [TileSide94B]
 top=197
 left=394
 image="../../ffg/img/094B.dds"
 traits=inside map
+reverse=TileSide94A
 
 [TileSide95A]
 top=46
 left=46
 image="../../ffg/img/095A.dds"
 traits=outside inside transition drawbridge
+reverse=TileSide95B
 
 [TileSide95B]
 top=46
 left=46
 image="../../ffg/img/095B.dds"
 traits=outside inside transition
+reverse=TileSide95A
 
 [TileSide96A]
 top=33
 left=98.5
 image="../../ffg/img/096A.dds"
 traits=outside sludge water
+reverse=TileSide96B
 
 [TileSide96B]
 top=59
 left=98.5
 image="../../ffg/img/096B.dds"
 traits=inside water
+reverse=TileSide96A
 
 [TileSide97A]
 top=46
 left=138
 image="../../ffg/img/097A.dds"
 traits=outside
+reverse=TileSide97B
 
 [TileSide97B]
 top=72
@@ -121,6 +140,7 @@ left=72
 pps=72
 image="img/097B.png"
 traits=inside
+reverse=TileSide97A
 
 [TileSide98A]
 top=72
@@ -128,9 +148,11 @@ left=72
 pps=72
 image="img/098A.png"
 traits=outside
+reverse=TileSide98B
 
 [TileSide98B]
 top=46
 left=203.5
 image="../../ffg/img/098B.dds"
 traits=inside
+reverse=TileSide98A
