--- a/content/D2E/boxed/tt/tiles.ini
+++ b/content/D2E/boxed/tt/tiles.ini
@@ -5,18 +5,21 @@ top=164
 left=138
 image="../../ffg/img/043A.dds"
 traits=outside
+reverse=TileSide43B
 
 [TileSide43B]
 top=164
 left=164
 image="../../ffg/img/043B.dds"
 traits=inside
+reverse=TileSide43A
 
 [TileSide44A]
 top=197
 left=197
 image="../../ffg/img/044A.dds"
 traits=outside inside transistion
+reverse=TileSide44B
 
 [TileSide44B]
 top=72
@@ -24,6 +27,7 @@ left=72
 pps=72
 image="img/044B.png"
 traits=inside
+reverse=TileSide44A
 
 [TileSide45A]
 top=72
@@ -31,12 +35,14 @@ left=72
 pps=72
 image="img/045A.png"
 traits=outside
+reverse=TileSide45B
 
 [TileSide45B]
 top=354.5
 left=92
 image="../../ffg/img/045B.dds"
 traits=inside
+reverse=TileSide45A
 
 [TileSide46A]
 top=72
@@ -44,12 +50,14 @@ left=72
 pps=72
 image="img/046A.png"
 traits=outside
+reverse=TileSide46B
 
 [TileSide46B]
 top=111.5
 left=46
 image="../../ffg/img/046B.dds"
 traits=water inside
+reverse=TileSide46A
 
 [TileSide47A]
 top=72
@@ -57,44 +65,52 @@ left=72
 pps=72
 image="img/047A.png"
 traits=outside
+reverse=TileSide47B
 
 [TileSide47B]
 top=151
 left=151
 image="../../ffg/img/047B.dds"
 traits=inside
+reverse=TileSide47A
 
 [TileSide48A]
 top=144.5
 left=144.5
 image="../../ffg/img/048A.dds"
 traits=outside water
+reverse=TileSide48B
 
 [TileSide48B]
 top=144.5
 left=144.5
 image="../../ffg/img/048B.dds"
 traits=water inside
+reverse=TileSide48A
 
 [TileSide49A]
 top=144.5
 left=144.5
 image="../../ffg/img/049A.dds"
 traits=outside
+reverse=TileSide49B
 
 [TileSide49B]
 top=144.5
 left=144.5
 image="../../ffg/img/049B.dds"
 traits=inside water
+reverse=TileSide49A
 
 [TileSideS2A]
 pps=72
 image="img/S2A.png"
 traits=outside
+reverse=TileSideS2B
 
 [TileSideS2B]
 top=98.5
 left=46
 image="../../ffg/img/S2B.dds"
 traits=inside
+reverse=TileSideS2A
