--- a/content/D2E/boxed/lor/tiles.ini
+++ b/content/D2E/boxed/lor/tiles.ini
@@ -1,58 +1,66 @@
 ; many are missing
-
 [TileSide36A]
 top=92
 left=92
 image="../../ffg/img/036A.dds"
 traits=outside
+reverse=TileSide36B
 
 [TileSide36B]
 top=92
 left=92
 image="../../ffg/img/036B.dds"
 traits=inside pit
+reverse=TileSide36A
 
 [TileSide37A]
 top=210
 left=39.5
 image="../../ffg/img/037A.dds"
 traits=outside stone
+reverse=TileSide37B
 
 [TileSide37B]
 top=210
 left=39.5
 image="../../ffg/img/037B.dds"
 traits=inside pit
+reverse=TileSide37A
 
 [TileSide38A]
 top=144.5
 left=197
 image="../../ffg/img/038A.dds"
 traits=outside
+reverse=TileSide38B
 
 [TileSide38B]
 top=144.5
 left=197
 image="../../ffg/img/038B.dds"
 traits=inside water
+reverse=TileSide38A
 
 [TileSide39A]
 top=105
 left=144.5
 image="../../ffg/img/039A.dds"
 traits=outside
+reverse=TileSide39B
 
 [TileSide39B]
 top=105
 left=144.5
 image="../../ffg/img/039B.dds"
 traits=inside stairs
+reverse=TileSide39A
 
 [TileSide40A]
 top=249.5
 left=197
 image="../../ffg/img/040A.dds"
 traits=outside
+reverse=TileSide40B
 
 [TileSide40B]
 top=72
@@ -60,24 +68,28 @@ left=72
 pps=72
 image="img/040B.png"
 traits=inside
+reverse=TileSide40A
 
 [TileSide41A]
 top=407
 left=197
 image="../../ffg/img/041A.dds"
 traits=outside
+reverse=TileSide41B
 
 [TileSide41B]
 top=407
 left=197
 image="../../ffg/img/041B.dds"
 traits=inside
+reverse=TileSide41A
 
 [TileSide42A]
 top=407
 left=197
 image="../../ffg/img/042A.dds"
 traits=outside
+reverse=TileSide42B
 
 [TileSide42B]
 top=72
@@ -85,15 +97,18 @@ left=72
 pps=72
 image="img/042B.png"
 traits=inside
+reverse=TileSide42A
 
 [TileSide43A]
 top=164
 left=138
 image="../../ffg/img/043A.dds"
 traits=outside
+reverse=TileSide43B
 
 [TileSide43B]
 top=164
 left=164
 image="../../ffg/img/043B.dds"
 traits=inside
+reverse=TileSide43A
