Item display screen.

--- a/content/MoM/base/items.ini
+++ b/content/MoM/base/items.ini
@@ -1,244 +1,244 @@
 [ItemCommon18Derringer]
 name={ffg:COMMON_ITEM_18_DERRINGER}
-image=../ffg/img/Item_Common18Derringer.dds
+image=../ffg/img/CommonItem_18Derringer.dds
 traits=weapon
 
 [ItemCommon38Revolver]
 name={ffg:COMMON_ITEM_38_REVOLVER}
-image=../ffg/img/Item_Common38Revolver.dds
+image=../ffg/img/CommonItem_38Revolver.dds
 traits=weapon firearm
 
 [ItemCommon45Automatic]
 name={ffg:COMMON_ITEM_45_AUTOMATIC}
-image=../ffg/img/Item_Common45Automatic.dds
+image=../ffg/img/CommonItem_45Automatic.dds
 traits=weapon firearm
 
 [ItemCommon2x4]
 name={ffg:COMMON_ITEM_2x4}
-image=../ffg/img/Item_Common2x4.dds
+image=../ffg/img/CommonItem_2x4.dds
 traits=weapon
 
 [ItemCommonArcaneManuscript]
 name={ffg:COMMON_ITEM_ARCANE_MANUSCRIPT}
-image=../ffg/img/Item_CommonArcaneManuscript.dds
+image=../ffg/img/CommonItem_ArcaneManuscript.dds
 
 [ItemCommonAxe]
 name={ffg:COMMON_ITEM_AXE}
-image=../ffg/img/Item_CommonAxe.dds
+image=../ffg/img/CommonItem_Axe.dds
 
 [ItemCommonBandages]
 name={ffg:COMMON_ITEM_BANDAGES}
-image=../ffg/img/Item_CommonBandages.dds
+image=../ffg/img/CommonItem_Bandages.dds
 
 [ItemCommonBrassKnuckles]
 name={ffg:COMMON_ITEM_BRASS_KNUCKLES}
-image=../ffg/img/Item_CommonBrassKnuckles.dds
+image=../ffg/img/CommonItem_BrassKnuckles.dds
 
 [ItemCommonBullseyeLantern]
 name={ffg:COMMON_ITEM_BULLSEYE_LANTERN}
-image=../ffg/img/Item_CommonBullseyeLantern.dds
+image=../ffg/img/CommonItem_BullseyeLantern.dds
 
 [ItemCommonCandles]
 name={ffg:COMMON_ITEM_CANDLES}
-image=../ffg/img/Item_CommonCandles.dds
+image=../ffg/img/CommonItem_Candles.dds
 trait=light
 
 [ItemCommonCarbineRifle]
 name={ffg:COMMON_ITEM_CARBINE_RIFLE}
-image=../ffg/img/Item_CommonCarbineRifle.dds
+image=../ffg/img/CommonItem_CarbineRifle.dds
 
 [ItemCommonCrowbar]
 name={ffg:COMMON_ITEM_CROWBAR}
-image=../ffg/img/Item_CommonCrowbar.dds
+image=../ffg/img/CommonItem_Crowbar.dds
 
 [ItemCommonDynamite]
 name={ffg:COMMON_ITEM_DYNAMITE}
-image=../ffg/img/Item_CommonDynamite.dds
+image=../ffg/img/CommonItem_Dynamite.dds
 
 [ItemCommonElderSignPendant]
 name={ffg:COMMON_ITEM_ELDER_SIGN_PENDANT}
-image=../ffg/img/Item_CommonElderSignPendant.dds
+image=../ffg/img/CommonItem_ElderSignPendant.dds
 
 [ItemCommonElderWard]
 name={ffg:COMMON_ITEM_ELDER_WARD}
-image=../ffg/img/Item_CommonElderWard.dds
+image=../ffg/img/CommonItem_ElderWard.dds
 
 [ItemCommonFireExtinguisher]
 name={ffg:COMMON_ITEM_FIRE_EXTINGUISHER}
-image=../ffg/img/Item_CommonFireExtinguisher.dds
+image=../ffg/img/CommonItem_FireExtinguisher.dds
 
 [ItemCommonFlareGun]
 name={ffg:COMMON_ITEM_FLARE_GUN}
-image=../ffg/img/Item_CommonFlareGun.dds
+image=../ffg/img/CommonItem_FlareGun.dds
 
 [ItemCommonHolyCross]
 name={ffg:COMMON_ITEM_HOLY_CROSS}
-image=../ffg/img/Item_CommonHolyCross.dds
+image=../ffg/img/CommonItem_HolyCross.dds
 
 [ItemCommonHolyWater]
 name={ffg:COMMON_ITEM_HOLY_WATER}
-image=../ffg/img/Item_CommonHolyWater.dds
+image=../ffg/img/CommonItem_HolyWater.dds
 
 [ItemCommonKeroseneLantern]
 name={ffg:COMMON_ITEM_KEROSENE_LANTERN}
-image=../ffg/img/Item_CommonKeroseneLantern.dds
+image=../ffg/img/CommonItem_KeroseneLantern.dds
 
 [ItemCommonKingJamesBible]
 name={ffg:COMMON_ITEM_KING_JAMES_BIBLE}
-image=../ffg/img/Item_CommonKingJamesBible.dds
+image=../ffg/img/CommonItem_KingJamesBible.dds
 
 [ItemCommonKnife]
 name={ffg:COMMON_ITEM_KNIFE}
-image=../ffg/img/Item_CommonKnife.dds
+image=../ffg/img/CommonItem_Knife.dds
 
 [ItemCommonLeadPipe]
 name={ffg:COMMON_ITEM_LEAD_PIPE}
-image=../ffg/img/Item_CommonLeadPipe.dds
+image=../ffg/img/CommonItem_LeadPipe.dds
 
 [ItemCommonLuckyCigaretteCase]
 name={ffg:COMMON_ITEM_LUCKY_CIGARETTE_CASE}
-image=../ffg/img/Item_CommonLuckyCigaretteCase.dds
+image=../ffg/img/CommonItem_LuckyCigaretteCase.dds
 
 [ItemCommonLuckyRabbitsFoot]
 name={ffg:COMMON_ITEM_LUCKY_RABBITS_FOOT}
-image=../ffg/img/Item_CommonLuckyRabbitsFoot.dds
+image=../ffg/img/CommonItem_LuckyRabbitsFoot.dds
 
 [ItemCommonMachete]
 name={ffg:COMMON_ITEM_MACHETE}
-image=../ffg/img/Item_CommonMachete.dds
+image=../ffg/img/CommonItem_Machete.dds
 
 [ItemCommonMagnifyingGlass]
 name={ffg:COMMON_ITEM_MAGNIFYING_GLASS}
-image=../ffg/img/Item_CommonMagnifyingGlass.dds
+image=../ffg/img/CommonItem_MagnifyingGlass.dds
 
 [ItemCommonMeatCleaver]
 name={ffg:COMMON_ITEM_MEAT_CLEAVER}
-image=../ffg/img/Item_CommonMeatCleaver.dds
+image=../ffg/img/CommonItem_MeatCleaver.dds
 
 [ItemCommonMedicalTextbook]
 name={ffg:COMMON_ITEM_MEDICAL_TEXTBOOK}
-image=../ffg/img/Item_CommonMedicalTextbook.dds
+image=../ffg/img/CommonItem_MedicalTextbook.dds
 
 [ItemCommonPickaxe]
 name={ffg:COMMON_ITEM_PICKAXE}
-image=../ffg/img/Item_CommonPickaxe.dds
+image=../ffg/img/CommonItem_Pickaxe.dds
 
 [ItemCommonPocketWatch]
 name={ffg:COMMON_ITEM_POCKET_WATCH}
-image=../ffg/img/Item_CommonPocketWatch.dds
+image=../ffg/img/CommonItem_PocketWatch.dds
 
 [ItemCommonRitualDagger]
 name={ffg:COMMON_ITEM_RITUAL_DAGGER}
-image=../ffg/img/Item_CommonRitualDagger.dds
+image=../ffg/img/CommonItem_RitualDagger.dds
 
 [ItemCommonSedatives]
 name={ffg:COMMON_ITEM_SEDATIVES}
-image=../ffg/img/Item_CommonSedatives.dds
+image=../ffg/img/CommonItem_Sedatives.dds
 
 [ItemCommonShotgun]
 name={ffg:COMMON_ITEM_SHOTGUN}
-image=../ffg/img/Item_CommonShotgun.dds
+image=../ffg/img/CommonItem_Shotgun.dds
 
 [ItemCommonShovel]
 name={ffg:COMMON_ITEM_SHOVEL}
-image=../ffg/img/Item_CommonShovel.dds
+image=../ffg/img/CommonItem_Shovel.dds
 
 [ItemCommonSledgehammer]
 name={ffg:COMMON_ITEM_SLEDGEHAMMER}
-image=../ffg/img/Item_CommonSledgehammer.dds
+image=../ffg/img/CommonItem_Sledgehammer.dds
 
 [ItemCommonTommyGun]
 name={ffg:COMMON_ITEM_TOMMY_GUN}
-image=../ffg/img/Item_CommonTommyGun.dds
+image=../ffg/img/CommonItem_TommyGun.dds
 
 [ItemCommonTorch]
 name={ffg:COMMON_ITEM_TORCH}
-image=../ffg/img/Item_CommonTorch.dds
+image=../ffg/img/CommonItem_Torch.dds
 
 [ItemCommonWhiskey]
 name={ffg:COMMON_ITEM_WHISKEY}
-image=../ffg/img/Item_CommonWhiskey.dds
+image=../ffg/img/CommonItem_Whiskey.dds
 
 [ItemCommonWrench]
 name={ffg:COMMON_ITEM_WRENCH}
-image=../ffg/img/Item_CommonWrench.dds
+image=../ffg/img/CommonItem_Wrench.dds
 
 [ItemUniqueBrassKey]
 name={ffg:UNIQUE_ITEM_BRASS_KEY}
-image=../ffg/img/Item_UniqueBrassKey.dds
+image=../ffg/img/UniqueItem_BrassKey.dds
 
 [ItemUniqueCircumstantialEvidence]
 name={ffg:UNIQUE_ITEM_CIRCUMSTANTIAL_EVIDENCE}
-image=../ffg/img/Item_UniqueCircumstantialEvidence.dds
+image=../ffg/img/UniqueItem_CircumstantialEvidence.dds
 
 [ItemUniqueConclusiveEvidence]
 name={ffg:UNIQUE_ITEM_CONCLUSIVE_EVIDENCE}
-image=../ffg/img/Item_UniqueConclusiveEvidence.dds
+image=../ffg/img/UniqueItem_ConclusiveEvidence.dds
 
 [ItemUniqueCultSigil]
 name={ffg:UNIQUE_ITEM_CULT_SIGIL}
-image=../ffg/img/Item_UniqueCultSigil.dds
+image=../ffg/img/UniqueItem_CultSigil.dds
 
 [ItemUniqueDukeTheDog]
 name={ffg:UNIQUE_ITEM_DUKE_THE_DOG}
-image=../ffg/img/Item_UniqueDukeTheDog.dds
+image=../ffg/img/UniqueItem_DukeTheDog.dds
 
 [ItemUniqueFluxStabilizer]
 name={ffg:UNIQUE_ITEM_FLUX_STABILIZER}
-image=../ffg/img/Item_UniqueFluxStabilizer.dds
+image=../ffg/img/UniqueItem_FluxStabilizer.dds
 
 [ItemUniqueForensicEvidence]
 name={ffg:UNIQUE_ITEM_FORENSIC_EVIDENCE}
-image=../ffg/img/Item_UniqueForensicEvidence.dds
+image=../ffg/img/UniqueItem_ForensicEvidence.dds
 
 [ItemUniqueHandcuffs]
 name={ffg:UNIQUE_ITEM_HANDCUFFS}
-image=../ffg/img/Item_UniqueHandcuffs.dds
+image=../ffg/img/UniqueItem_Handcuffs.dds
 
 [ItemUniqueGoldKey]
 name={ffg:UNIQUE_ITEM_GOLD_KEY}
-image=../ffg/img/Item_UniqueGoldKey.dds
+image=../ffg/img/UniqueItem_GoldKey.dds
 
 [ItemUniqueGrotesqueStone]
 name={ffg:UNIQUE_ITEM_GROTESQUE_STONE}
-image=../ffg/img/Item_UniqueGrotesqueStone.dds
+image=../ffg/img/UniqueItem_GrotesqueStone.dds
 
 [ItemUniqueIncriminatingEvidence]
 name={ffg:UNIQUE_ITEM_INCRIMINATING_EVIDENCE}
-image=../ffg/img/Item_UniqueIncriminatingEvidence.dds
+image=../ffg/img/UniqueItem_IncriminatingEvidence.dds
 
 [ItemUniqueOilLamp]
 name={ffg:UNIQUE_ITEM_OIL_LAMP}
-image=../ffg/img/Item_UniqueOilLamp.dds
+image=../ffg/img/UniqueItem_OilLamp.dds
 
 [ItemUniqueOldJournal]
 name={ffg:UNIQUE_ITEM_OLD_JOURNAL}
-image=../ffg/img/Item_UniqueOldJournal.dds
+image=../ffg/img/UniqueItem_OldJournal.dds
 
 [ItemUniqueOldKeys]
 name={ffg:UNIQUE_ITEM_OLD_KEYS}
-image=../ffg/img/Item_UniqueOldKeys.dds
+image=../ffg/img/UniqueItem_OldKeys.dds
 
 [ItemUniqueMissingLink]
 name={ffg:UNIQUE_ITEM_MISSING_LINK}
-image=../ffg/img/Item_UniqueMissingLink.dds
+image=../ffg/img/UniqueItem_MissingLink.dds
 
 [ItemUniquePhotographicEvidence]
 name={ffg:UNIQUE_ITEM_PHOTOGRAPHIC_EVIDENCE}
-image=../ffg/img/Item_UniquePhotographicEvidence.dds
+image=../ffg/img/UniqueItem_PhotographicEvidence.dds
 
 [ItemUniquePuzzleBox]
 name={ffg:UNIQUE_ITEM_PUZZLE_BOX}
-image=../ffg/img/Item_UniquePuzzleBox.dds
+image=../ffg/img/UniqueItem_PuzzleBox.dds
 
 [ItemUniqueRitualComponents]
 name={ffg:UNIQUE_ITEM_RITUAL_COMPONENTS}
-image=../ffg/img/Item_UniqueRitualComponents.dds
+image=../ffg/img/UniqueItem_RitualComponents.dds
 
 [ItemUniqueRope]
 name={ffg:UNIQUE_ITEM_ROPE}
-image=../ffg/img/Item_UniqueRope.dds
+image=../ffg/img/UniqueItem_Rope.dds
 
 [ItemUniqueSilverKey]
 name={ffg:UNIQUE_ITEM_SILVER_KEY}
-image=../ffg/img/Item_UniqueSilverKey.dds
+image=../ffg/img/UniqueItem_SilverKey.dds
