Adding more MoM tokens.

--- a/content/MoM/base/tokens.ini
+++ b/content/MoM/base/tokens.ini
@@ -32,3 +32,51 @@ x=368
 y=130
 height=130
 width=130
+
+[TokenBarricadeInside]
+image="img/barricadeinside.png"
+pps=117
+
+[TokenBarricadeOutside]
+image="img/barricadeoutside.png"
+pps=117
+
+[TokenDoorInside]
+image="img/doorinside.png"
+pps=100
+
+[TokenDoorOutside]
+image="img/dooroutside.png"
+pps=100
+
+[TokenSecretInside]
+image="img/secretinside.png"
+pps=117
+
+[TokenSecretOutside]
+image="img/secretoutside.png"
+pps=117
+
+[TokenSewer]
+image="img/sewer.png"
+pps=117
+
+[TokenTrapdoor]
+image="img/trapdoor.png"
+pps=117
+
+[TokenWallInside]
+image="img/wallinside.png"
+pps=100
+
+[TokenWallOutside]
+image="img/walloutside.png"
+pps=100
+
+[TokenWallInsideGreen]
+image="img/wallinsidegreen.png"
+pps=100
+
+[TokenWallOutsideGreen]
+image="img/walloutsidegreen.png"
+pps=100
